feat: 하드, 소프트 삭제 구현 및 Base 서비스 메소드 추가